exercise/busybox.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    run: busybox
  name: busybox
spec:
  replicas: 1
  selector:
    matchLabels:
      run: busybox
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        run: busybox
    spec:
      containers:
      - image: busybox
        imagePullPolicy: IfNotPresent
        name: busybox
        resources: {}
status: {}
