exercise/exchangedata.yaml
apiVersion: v1
kind: Pod
metadata:
 name: sharevol
spec:
 containers:
 - name: c1
   image: centos:7
   imagePullPolicy: IfNotPresent
   command: 
    - "bin/bash"
    - "-c"
    - "sleep 10000"
   volumeMounts:
    - name: xchange
      mountPath : "/tmp/xchange"
 - name: c2
   image: centos:7
   imagePullPolicy: IfNotPresent
   command: 
    - "bin/bash"
    - "-c"
    - "sleep 10000"
   volumeMounts:
    - name: xchange
      mountPath : "/tmp/data"
 volumes:
 - name: xchange
   emptyDir: {}
