exercise/fancyapp.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: fancyapp
spec:
 replicas: 5
 template:
  metadata:
   labels:
    app: fancy
    env: development
  spec:
   containers:
   - name : sise
     image: mhausenblas/simpleservice:0.5.0
     imagePullPolicy: IfNotPresent
     ports:
     - containerPort: 9876
