exercise/fluentd-deamonset.yaml
apiVersion: extensions/v1beta1
kind: DaemonSet
metadata:
 name: fluentd
spec:
 template:
  metadata:
   labels:
    app: fluentd
  name: fluentd
 spec:
  containers:
  - name: fluentd
    image:
