exercise/mysql.yaml
apiVersion: v1
kind: Pod
metadata: 
 name: db
spec:
 containers:
 - image: mysql:5.5
   imagePullPolicy: IfNotPresent
   name: db
   volumeMounts:
   - mountPath: /var/lib/mysql
     name: data
 volumes:
 - name: data
   persistentVolumeClaim:
     claimName: data
