exercise/nginx-init-container.yaml
kind: Deployment
apiVersion: apps/v1beta1
metadata:
 name: nginx-init
spec:
  replicas: 1
  template:
   metadata:
    labels:
     app: nginx
   spec:
    containers:
    - name: webserver
      image: nginx
      imagePullPolicy: IfNotPresent
      ports:
      - containerPort: 80
