exercise/oreilly.yaml
apiVersion: v1
kind: Pod
metadata: 
 name: oreilly
spec: 
 containers:
 - name: busybox
   image: busybox
   imagePullPolicy: IfNotPresent
   command:
    - "sleep"
    - "3600"
   volumeMounts:
   - mountPath: /oreilly
     name: oreilly
 volumes:
 - name: oreilly
   configMap:
    name: configfile
