exercise/ubuntu.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    run: ubuntu
  name: ubuntu
spec:
  replicas: 1
  selector:
    matchLabels:
      run: ubuntu
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        run: ubuntu
    spec:
      containers:
      - image: ubuntu
        imagePullPolicy: IfNotPresent
        name: ubuntu
        resources: {}
status: {}
