exercise/webshell-svc.yaml
apiVersion: v1
kind: Service
metadata:
 name: webshell
spec:
 type: NodePort
 ports:
  - port: 8080
    nodePort: 8686
 selector:
  app: webshell
